Insert weather-app.js script in index.html

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 
 
 	<!-- jQuery -->
-
-	<!-- fallback jQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    
+    <!-- fallback jQuery -->
 
 	<!-- Bootstrap -->
 
 	<!-- Custom JS -->
-	
+	<script src="./js/weather-app.js"></script>
+
 </body>
 </html>
