--- a/index.html
+++ b/index.html
@@ -27,35 +27,41 @@
 
 			<div class="col-md-6 col-md-offset-3 col-xs-12 col-xs-offset-0">
 
+					<div id="ShareText" class="share-text" style="display: block; font-size: 30px; text-align: center; vertical-align: middle; margin-top: 30%; ">
+						<i class="fa fa-map-marker"></i>
+						<p>Ping location to get instant Forecast!</p>
+						<a id="Ping" class="btn btn-warning">Ping Now</a>
+					</div>
+
 					<div id="AreaTimezone" class="area-timezone">
-							<h2 id="Address">Moi Dr, Nairobi, Kenya</h2>
+						<h2 id="Address"></h2>
 					</div>
 
 					<div id="Climacon">
-						<img class="img-responsive cloud-icon" src="http://www.iconsdb.com/icons/preview/orange/cloud-3-xxl.png">					
+						<i id="Cloud" class="fa fa-cloud"></i>					
 					</div>
 
 					<div class="current-state">
-						<h2 id="CurrentIcon">Partly Cloudy Day</h2>
+						<h2 id="CurrentIcon"></h2>
 					</div>
 
 					<div class="temperature">
-						<span id="Temperature"> <i class="fa fa-thermometer-half"></i> 30 <sup>o</sup> C</span>
+						<i class="fa fa-thermometer-half"></i><span id="Temperature"> </span><sup></sup>
 					</div>
 
 					<div class="row forecast-row">
 						<div class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0">
 							<div class="col-md-4 col-xs-4">
-								<span id="Presure"><i class="fa fa-tachometer"></i> 1000hpa</span>				
+								<i class="fa fa-tachometer">Pressure</i><span id="Pressure"> </span>				
 							</div>
 
 							<div class="col-md-4 col-xs-4">
-							    <span id="Humidity"><i class="fa fa-tint"></i> 3%</span>							
+							    <i class="fa fa-tint">Humidity</i><span id="Humidity"> </span>							
 
 							</div>
 
 							<div class="col-md-4 col-xs-4">
-								<span id="Wind"><i class="fa fa-flag-checkered"></i> 4m/s</span>						
+								<i class="fa fa-flag-checkered">Windspeed</i><span id="WindSpeed"> </span>						
 							</div>
 								
 						</div>
@@ -63,7 +69,9 @@
 					</div>
 
 					<div class="forecast-summary">
-						<p id="Summary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod. sed do eiusmod.</p>
+						<p id="Summary"></p>
+
+						<a id="Degrees" class="btn btn-warning">Convert Temperature</a>
 					</div>
 					
 
