Update outline styling for button #Ping

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 	<div class="top">
-		lorem lorem
+		Weather App
 	</div>
 
 		<div class="container-fluid middle">
@@ -30,7 +30,7 @@
 					<div id="ShareText" class="share-text" style="display: block; font-size: 30px; text-align: center; vertical-align: middle; margin-top: 30%; ">
 						<i class="fa fa-map-marker"></i>
 						<p>Ping location to get instant Forecast!</p>
-						<a id="Ping" class="btn btn-warning">Ping Now</a>
+						<a id="Ping" class="btn btn-outline-warning">Ping Now</a>
 					</div>
 
 					<div id="AreaTimezone" class="area-timezone">
