Fix btn-convert color transition

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 	<div class="top">
-		Weather App
+		Tenki 天気 - The Weather App
 	</div>
 
 		<div class="container-fluid middle">
@@ -71,7 +71,7 @@
 					<div class="forecast-summary">
 						<p id="Summary"></p>
 
-						<a id="Degrees" class="btn btn-warning">Convert Temperature</a>
+						<a id="Degrees" class="btn btn-convert">Convert to &#8451;</a>
 					</div>
 					
 
