--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
 	<!-- ========= Custom CSS    ========= -->
 	<link rel="stylesheet" type="text/css" href="./css/weather-app-style.css">
-</head>
+
+  
+
+</head>type="text/css" 
 <body>
 
 	<div class="top">
@@ -27,7 +30,7 @@
 
 			<div class="col-md-6 col-md-offset-3 col-xs-12 col-xs-offset-0">
 
-					<div id="ShareText" class="share-text" style="display: block; font-size: 30px; text-align: center; vertical-align: middle; margin-top: 30%; ">
+					<div id="ShareText" class="share-text" style="display: block; font-size: 28px; text-align: center; vertical-align: middle; margin-top: 30%; ">
 						<i class="fa fa-map-marker"></i>
 						<p>Ping location to get instant Forecast!</p>
 						<a id="Ping" class="btn btn-outline-warning">Ping Now</a>
@@ -38,7 +41,9 @@
 					</div>
 
 					<div id="Climacon">
-						<i id="Cloud" class="fa fa-cloud"></i>					
+						<!--<i id="Cloud" class="fa fa-cloud"></i>	-->
+						<canvas id="Skycons" width="128px" height="128px" style="margin-left: auto; margin-right: auto; display: block;">
+						</canvas>				
 					</div>
 
 					<div class="current-state">
@@ -105,6 +110,7 @@
 
 	<!-- Custom JS -->
 	<script src="./js/weather-app.js"></script>
+
 
 </body>
 </html>
