Fix responsivenes for media screen max-width 480px

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=0, initial-scale=1">
 	<meta name="description" content="">
 	<title>Weather App</title>
 	<link rel="icon" href="" type="image/x-icon">
@@ -30,7 +30,7 @@
 
 			<div class="col-md-6 col-md-offset-3 col-xs-12 col-xs-offset-0">
 
-					<div id="ShareText" class="share-text" style="display: block; font-size: 28px; text-align: center; vertical-align: middle; margin-top: 30%; ">
+					<div id="ShareText" class="share-text">
 						<i class="fa fa-map-marker"></i>
 						<p>Ping location to get instant Forecast!</p>
 						<a id="Ping" class="btn btn-outline-warning">Ping Now</a>
