Update col-ms * in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<div class="container-fluid middle">
 
-			<div class="col-md-6 col-md-offset-3 col-xs-12 col-xs-offset-0">
+			<div class="col-md-6 col-md-offset-3 col-ms-6 col-ms-offset-3 col-xs-12 col-xs-offset-0">
 
 					<div id="ShareText" class="share-text">
 						<i class="fa fa-map-marker"></i>
@@ -55,17 +55,17 @@
 					</div>
 
 					<div class="row forecast-row">
-						<div class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0">
-							<div class="col-md-4 col-xs-4">
+						<div class="col-md-10 col-md-offset-1 col-ms-10 col-ms-offset-1  col-xs-12 col-xs-offset-0">
+							<div class="col-md-4 col-ms-4 col-xs-4">
 								<i class="fa fa-tachometer">Pressure</i><span id="Pressure"> </span>				
 							</div>
 
-							<div class="col-md-4 col-xs-4">
+							<div class="col-md-4 col-ms-4  col-xs-4">
 							    <i class="fa fa-tint">Humidity</i><span id="Humidity"> </span>							
 
 							</div>
 
-							<div class="col-md-4 col-xs-4">
+							<div class="col-md-4 col-ms-4  col-xs-4">
 								<i class="fa fa-flag-checkered">Windspeed</i><span id="WindSpeed"> </span>						
 							</div>
 								
