--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
+	<meta name="keywords" content="weather, forecast, rain, weather apps, tsunami, good weather cities, ">
+	<meta name="author" content="Bonface Mudiri">
 	<title>Weather App</title>
 	<link rel="icon" href="" type="image/x-icon">
 
@@ -23,7 +25,7 @@
 <body>
 
 	<div class="top">
-		Tenki 天気 - The Weather App
+		The Weather App <span> { 天気予報 }</span>
 	</div>
 
 		<div class="container-fluid middle">
