Update index.html meta description and js/weather-app.js app name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="">
+	<meta name="description" content="Get Free weather forecast with this weather app. We provide reliable weather forecast to allow you to plan your day.">
 	<meta name="keywords" content="weather, forecast, rain, weather apps, tsunami, good weather cities, ">
 	<meta name="author" content="Bonface Mudiri">
 	<title>Weather App</title>
