Update js/weather-app.js to check if browser supports Geolocation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 					<div id="ShareText" class="share-text">
 						<i class="fa fa-map-marker"></i>
-						<p>Ping location to get instant Forecast!</p>
+						<p id="PingText">Ping location to get instant Forecast!</p>
 						<a id="Ping" class="btn btn-outline-warning">Ping Now</a>
 					</div>
 
